<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.consumerapp.ConsumerAppActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/FullWidthContainer">
        <TextView
            android:id="@+id/textView4"
            style="@style/WhiteText.LargeText.Default"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/your_stats"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_favorite"
            style="@style/CardViewFavoriteActivity"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/FullWidthContainer">

                <ImageView
                    style="@style/ImageFavoriteActivity"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_number_of_favorite"
                    style="@style/LargeTextFavoriteActivity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="0" />

                <TextView
                    style="@style/LargeTextFavoriteActivity"
                    android:text="@string/favorites"
                    app:layout_constraintBottom_toTopOf="@+id/tv_deacription_favorite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_number_of_favorite" />

                <TextView
                    android:id="@+id/tv_deacription_favorite"
                    style="@style/DescriptionTextFavoriteActivity"
                    android:text="@string/favorite_detail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView2"
            style="@style/WhiteText.LargeText.Default"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/your_favorites"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_favorite" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_no_data"
            style="@style/FullWidthContainer"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:id="@+id/img_no_data"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_people"
                android:tag="@string/color_accent_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/WhiteText.BasicText.Default.Center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/favorite_no_data"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_no_data" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_data"
            style="@style/FullWidthContainer"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_no_data">
            <Spinner
                android:id="@+id/spinner_sort_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:entries="@array/sort_type"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sort"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_user"
                style="@style/FullWidthContainer"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/container_data"
                app:layout_constraintStart_toStartOf="@id/container_data"
                app:layout_constraintTop_toBottomOf="@+id/spinner_sort_favorite"
                tools:listitem="@layout/list_main_item_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>